# libchessinterface

./: .gitignore  COPYING.txt  INSTALL.txt  Makefile.am  README.txt  autogen.sh  configure  configure.ac  example.c
src/: Makefile.am  chessengine.c  chessinterface.h  chessinterfaceengine.h
src/execproc/: execproc.c  execproc.h
src/threading/: threading.c
